--- a/index.html
+++ b/index.html
@@ -1,8 +1,228 @@
 <html>
-  <head>
-    <title>Kashimura</title>
-    <style></style>
-  </head>
-  <body>
-  </body>
+	<head>
+		<title>; w ;</title>
+		<style>
+			body {
+				background-image: url("image/background.jpg");
+				background-size: cover;
+				padding: 0px;
+				border: 0px;
+				overflow-x: hidden;
+				overflow-y: hidden;
+			}
+			div {
+				top: 0px;
+				left: 0px;
+				width: 12px;
+				height: 12px;
+				position: absolute;
+			}
+		</style>
+		<script>
+			var all_width = 40;
+			var all_height = 40;
+			var Score = 0;
+			var IsWindowSize = true;
+			var pause = false;
+			var timer;
+			window.addEventListener("DOMContentLoaded", function() {
+				var bodytag = document.getElementsByTagName("body")[0];
+				function Snake() {
+					//设置元素高宽 动画行走的方向
+					this.width = all_width;
+					this.height = all_height;
+					this.direction = 'right';
+					//元素当前状态 当与元素碰撞的时候的 添加一个元素
+					this.body = [
+						{x:2, y:0},
+						{x:1, y:0},
+						{x:0, y:0}
+					];
+					//显示当前元素
+					this.display = function () {
+						//创建新的元素
+						for(var i=0;i<this.body.length;i++) {
+							if(this.body[i].x != null) {
+								this.body[i].flag = document.createElement('div');
+								//设置宽高
+								this.body[i].flag.style.width = this.width + 'px';
+								this.body[i].flag.style.height = this.height + 'px';
+								this.body[i].flag.style.borderRadius = "20%";
+								//this.body[i].flag.style.background = "url(\"https://s2.ax1x.com/2019/10/19/Kn9ouR.png\")";
+								//this.body[i].flag.style.backgroundSize = "cover";
+								this.body[i].flag.style.background = "rgb(" + Math.floor(Math.random()*256) + "," + Math.floor(Math.random()*256) + "," + Math.floor(Math.random()*256) + ")";
+								//设置位置
+								this.body[i].flag.style.position = 'absolute';
+								this.body[i].flag.style.left = this.body[i].x * this.width + 'px';
+								this.body[i].flag.style.top = this.body[i].y * this.height + 'px';
+								bodytag.appendChild(this.body[i].flag);
+							}
+						}
+					}
+					//开始让元素动起来 后一个元素到前一个元素的位置
+					//元素头根据方向处理 所以i不能等于0
+					this.run = function () {
+						//后一个元素到前一个元素的位置
+						for (var i=this.body.length-1;i>0;i--) {
+							this.body[i].x = this.body[i-1].x;
+							this.body[i].y = this.body[i-1].y;
+						}
+						if (IsWindowSize) {
+							//判断是否超出当前窗口外
+							if (this.body[0].x < 0 || this.body[0].x * this.width > window.innerWidth || this.body[0].y < 0 || this.body[0].y * this.height > window.innerHeight) {
+								CloseTimer();
+								console.log('restart');
+								for (var i=0;i<this.body.length;i++) {
+									if(this.body[i].flag != null) {
+										bodytag.removeChild(this.body[i].flag);
+									}
+								}
+								this.body = [
+									{x:2, y:0},
+									{x:1, y:0},
+									{x:0, y:0}
+								];
+								this.direction = 'right';
+								this.display();
+								return false;
+							}
+						} else {
+							if (this.body[0].x < 0) {
+								this.body[0].x = Math.floor(window.innerWidth / this.width);
+							} else if (this.body[0].x > (window.innerWidth / this.width)) {
+								this.body[0].x = 0;
+							} else if (this.body[0].y < 0) {
+								this.body[0].y = Math.floor(window.innerHeight / this.height);
+							} else if (this.body[0].y > (window.innerHeight / this.height)) {
+								this.body[0].y = 0;
+							}
+						}
+						//根据方向处理元素头
+						switch(this.direction) {
+							case 'left': this.body[0].x -= 1; break;
+							case 'right': this.body[0].x += 1; break;
+							case 'up': this.body[0].y -= 1; break;
+							case 'down': this.body[0].y += 1; break;
+						}
+						//元素碰撞到另外一个元素 xy坐标重合
+						if (this.body[0].x == food.x && this.body[0].y == food.y) {
+							SetScore(Score += 1);
+							//给元素增加一个节点
+							this.body.push({x:null},{y:null},{flag:null});
+							//清除碰撞到的元素 重新生成元素
+							bodytag.removeChild(food.flag);
+							food.display();
+						}
+						//如果元素头碰撞到元素节点 则重新开始
+						for (var i=4; i<this.body.length; i++) {
+							if (this.body[0].x == this.body[i].x && this.body[0].y == this.body[i].y) {
+								CloseTimer();
+								console.log('Is eatting me');
+								//删除节点
+								for (var i=0;i<this.body.length;i++) {
+									if(this.body[i].flag != null) {
+										bodytag.removeChild(this.body[i].flag);
+									}
+								}
+								//回到初始化状态
+								this.body = [
+									{x:2, y:0},
+									{x:1, y:0},
+									{x:0, y:0}
+								];
+								this.direction = 'right';
+								//初始化元素
+								this.display();
+								//结束
+								return false;
+							}
+						}
+						for (var i=0;i<this.body.length;i++) {
+							//当碰撞到元素时，flag是等于null，且不能删除
+							if (this.body[i].flag != null) {
+								bodytag.removeChild(this.body[i].flag);
+							}
+						}
+						this.display();
+					}
+				}
+				//构造被碰撞的元素
+				function Food() {
+					this.width = all_width;
+					this.height = all_height;
+					this.display = function() {
+						this.flag = document.createElement('div');
+						this.flag.style.width = this.width + 'px';
+						this.flag.style.height = this.height + 'px';
+						this.flag.style.background = 'red';
+						this.flag.style.borderRadius = '50%';
+						this.flag.style.position = 'absolute';
+						this.x = Math.floor(RandomInt(0, window.innerWidth) / this.width);
+						this.y = Math.floor(RandomInt(0, window.innerHeight) / this.height);
+						this.flag.style.left = this.x * this.width;
+						this.flag.style.top = this.y * this.height;
+						bodytag.appendChild(this.flag);
+					}
+				}
+				//
+				var snake = new Snake();
+				var food = new Food();
+				snake.display();
+				food.display();
+				//
+				document.body.onkeydown = function (e) {
+					if(!timer) GameStart();
+					var ev = e || window.event;
+					switch(ev.keyCode) {
+						case 32:
+							if(pause = !pause) {
+								clearInterval(timer);
+								document.getElementsByTagName('title')[0].innerHTML = 'Score: ' + Score + ' (Pause)';
+							} else {
+								timer = setInterval(function () {snake.run()}, 50);
+								SetScore(Score);
+							}
+							break;
+						case 37:
+							if(snake.direction != 'right') {
+								snake.direction = 'left';
+							}
+							break;
+						case 38:
+							if (snake.direction != 'down') {
+								snake.direction = 'up';
+							}
+							break;
+						case 39:
+							if (snake.direction != 'left') {
+								snake.direction = 'right';
+							}
+							break;
+						case 40:
+							if (snake.direction != 'up') {
+								snake.direction = 'down';
+							}
+							break;
+					}
+				};
+				function GameStart () {
+					CloseTimer();
+					timer = setInterval(function () {snake.run()}, 50);
+				}
+			}, false);
+			function CloseTimer() {
+				clearInterval(timer);
+				timer = 0;
+				SetScore(Score = 0);
+			}
+			function RandomInt(Min, Max) {
+				return Math.random() * (Max - Min) + Min;
+			}
+			function SetScore(Value) {
+				document.getElementsByTagName('title')[0].innerHTML = 'Score: ' + Value;
+			}
+		</script>
+	</head>
+	<body>
+	</body>
 </html>
